# erbridge-palu

./: .dockerignore  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  NOTICE  README.md  clippy.toml  docker-compose.yml  justfile
.claude/skills/palu-backend/: SKILL.md
.claude/skills/rust-rest-api/: SKILL.md
.github/workflows/: backend.yml  palu.yml  update-sde-fixtures.yml
openspec/changes/add-blops-staging/: proposal.md  tasks.md
openspec/changes/add-gate-routing-foundation/: design.md  proposal.md
openspec/changes/add-jump-range-reachability/: design.md  proposal.md  tasks.md
openspec/changes/add-route-system-fanout/: design.md  proposal.md  tasks.md
openspec/changes/remodel-connection-overlay/: design.md  tasks.md
openspec/specs/blops-staging/: spec.md
openspec/specs/connection-overlay/: spec.md
openspec/specs/gate-routing/: spec.md
openspec/specs/health-and-openapi/: spec.md
openspec/specs/hull-catalog/: spec.md
openspec/specs/jump-range/: spec.md
src/: app_state.rs  config.rs  dto.rs  error.rs  eve_scout.rs  graph.rs  lib.rs  main.rs  model.rs  range.rs  routing.rs  tasks.rs
src/handlers/: health.rs  mod.rs  route.rs
src/sde/: cache.rs  mod.rs  parse.rs  types.rs
src/services/: blops.rs  mod.rs  range.rs  route.rs
tests/: integration.rs
tests/fixtures/: boot-server.sh  eve-scout-sigs.json  update-sde-fixtures.sh
tests/hurl/: blops.hurl  fanout-over-cap.json  health.hurl  openapi.hurl  range.hurl  route.hurl  run-hurl.sh  wormhole_chain.hurl
tests/load/: fanout-wh.json  single-route.json
(+33 files in other folders)
