[package]
name = "erbridge-palu"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "erbridge-palu"
path = "src/main.rs"

[dependencies]
# HTTP server
axum = { version = "0.8", features = ["json"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Graph + spatial
petgraph = "0.8"
kiddo = "5"

# HTTP client. rustls-tls avoids a system OpenSSL build dependency.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Fast hashing
rustc-hash = "2"

# Small-buffer optimised vec for short routing paths
smallvec = "1"

# Structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Timestamps
chrono = { version = "0.4", features = ["serde"] }

# Lock-free Arc swap for hot-reloading the SDE graph + EVE-Scout snapshot
arc-swap = "1"

# SDE utilities
directories = "6"
zip = "2"

# OpenAPI / Swagger
utoipa = { version = "5", features = ["axum_extras", "chrono"] }
utoipa-axum = "0.2"
utoipa-swagger-ui = { version = "9", features = ["axum"] }

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

[lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
